<resources>
    <!-- DEBUG TAG -->
    <string name="debug_tag">INFO_448_DEBUG</string>
    <string name="app_name">Info448 Project</string>
    <string name="txtWelcome">Welcome</string>
    <string name="txtName">Please enter your name:</string>
    <string name="btnStartGame">Start</string>
    <string name="btnSingle">Single Player</string>
    <string name="btnMutiple">Multi-Player</string>
    <string name="txtCodeHint">Here is Your Code:</string>
    <string name="btnEnterRoom">Enter</string>
    <string name="btnCodeHintGuest">Please Enter Your Code:</string>
    <string name="txtHost">Host</string>
    <string name="txtGuest">Guest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_sensor_title">Alert</string>
    <string name="no_sensor_text">No gyroscope or accelerometer found. Please use another device.</string>
    <string name="no_sensor_affirmative">Alright...😔</string>
    <string name="hello_blank_fragment">🍆🍆🍆🍆🍆🍆🍆</string>
    <string name="instructions_header">Instruction videos</string>
    <string name="instructions_main"><u>How to play? Check our instruction videos!</u></string>


    <!-- TODO: Flip Strings -->
    <string name="restart_button">Restart</string>
    <string name="end_game_button">End Game</string>
    <!-- TODO: Dice Strings Strings -->
    <string name="default_dice_text">\?</string>
    <string name="default_player_name">You</string>
    <string name="safety_message_header">Warning:</string>
    <string name="safety_message_confirmation">I shall comply</string>
    <string name="safety_message">Please use protective wrapping to secure device from kinetic damage.</string>
    <string name="safety_message_shirt">Take off your shirt and wrap your phone within it. Secure with a tight knot.
    </string>
</resources>
