<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtWelcome"
            android:text="@string/txtWelcome" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textSize="30sp"/>
    <TextView
            android:text="@string/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtEnterName"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp" android:textSize="18sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtEnterName" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/btnStartGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStartGame" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textSize="18sp" android:background="#03A9F4"/>
</android.support.constraint.ConstraintLayout>