<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:id="@+id/relativeLayout"

            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="46dp" app:layout_constraintEnd_toEndOf="parent">
        <ImageView
                android:src="@drawable/flip_score_accent"
                android:id="@+id/flip_score_background"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
        />
        <ImageView
                android:src="@drawable/flip_score_accent"
                android:id="@+id/flip_score_background2"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:rotation="45"
                android:layout_width="150dp"
                android:layout_height="150dp"
        />
        <TextView
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="70dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:id="@+id/flip_counter" />
    </RelativeLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:orientation="vertical"
            android:background="@drawable/dice_shape"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/safety_layout" app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintVertical_bias="0.779">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/safety_message_header"
                  android:gravity="center"
                  android:textSize="50sp"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/safety_message"
                  android:layout_margin="5dp"

        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/safety_message_shirt"
        />
        <Button android:layout_gravity="center"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/safety_compliance_button"
                android:text="@string/safety_message_confirmation"
                android:layout_marginBottom="6dp"
        />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>